--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,6 @@
       <span class='zipcode'>10001</span>
     </div>
   </div>
-  <!-- <script src="js/scripts.js"></script> -->
+  <script src="client-index.js"></script>
 </body>
 </html>
