Form field now submitting data to backend upon clicking submit

--- a/client/index.html
+++ b/client/index.html
@@ -5,35 +5,37 @@
   <meta charset="utf-8">
   <title>Address Book</title>
   <link rel="stylesheet" type="text/css" href="/style.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   
 </head>
 
 <body>
   <h1>Address Book</h1>
   <div id='form-submission'>
-    <form action="/addressbook" method="POST">
+    <form>
       First Name:
-      <input type="text" name="firstName">
+      <input type="text" id="firstname-input" name="firstName">
       Last Name:
-      <input type="text" name="lastName">
+      <input type="text" id="lastname-input" name="lastName">
       Phone:
-      <input type="text" name="phone">
+      <input type="text" id="phone-input" name="phone">
       Address:
-      <input type="text" name="address">
+      <input type="text" id="address-input" name="address">
       City:
-      <input type="text" name="city">
+      <input type="text" id="city-input" name="city">
       State:
-      <input type="text" name="state">
+      <input type="text" id="state-input" name="state">
       Zipcode:
-      <input type="text" name="zipcode">
+      <input type="text" id="zipcode-input" name="zipcode">
+      
       <input type="submit" value="Submit">
     </form> 
   </div>
   <div id="address-book">
     <div id="people">
-      <div class="person">Rick</div>
+      <!-- <div class="person">Rick</div>
       <div class="person">Morty</div>
-      <div class="person">Summer</div>
+      <div class="person">Summer</div> -->
     </div>
 
     <div id='address'>
