Added function to displayPersonInfo

--- a/client/index.html
+++ b/client/index.html
@@ -33,9 +33,11 @@
   </div>
   <div id="address-book">
     <div id="people">
-      <!-- <div class="person">Rick</div>
+      <!--
+      <div class="person">Rick</div>
       <div class="person">Morty</div>
-      <div class="person">Summer</div> -->
+      <div class="person">Summer</div>
+      -->
     </div>
 
     <div id='address'>
